; ModuleID = '/home/carl/AnghaBench/git/extr_bisect.c_skip_away.c'
source_filename = "/home/carl/AnghaBench/git/extr_bisect.c_skip_away.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.commit_list = type { %struct.TYPE_4__*, %struct.commit_list* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@PRN_MODULO = common dso_local global i32 0, align 4
@current_bad_oid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.commit_list* (%struct.commit_list*, i32)* @skip_away to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.commit_list* @skip_away(%struct.commit_list* %0, i32 %1) #0 {
  %3 = alloca %struct.commit_list*, align 8
  %4 = alloca %struct.commit_list*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.commit_list*, align 8
  %7 = alloca %struct.commit_list*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.commit_list* %0, %struct.commit_list** %4, align 8
  store i32 %1, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @get_prn(i32 %11)
  store i32 %12, i32* %8, align 4
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* %8, align 4
  %15 = mul nsw i32 %13, %14
  %16 = load i32, i32* @PRN_MODULO, align 4
  %17 = sdiv i32 %15, %16
  %18 = load i32, i32* %8, align 4
  %19 = call i32 @sqrti(i32 %18)
  %20 = mul nsw i32 %17, %19
  %21 = load i32, i32* @PRN_MODULO, align 4
  %22 = call i32 @sqrti(i32 %21)
  %23 = sdiv i32 %20, %22
  store i32 %23, i32* %9, align 4
  %24 = load %struct.commit_list*, %struct.commit_list** %4, align 8
  store %struct.commit_list* %24, %struct.commit_list** %6, align 8
  store %struct.commit_list* null, %struct.commit_list** %7, align 8
  store i32 0, i32* %10, align 4
  br label %25

25:                                               ; preds = %52, %2
  %26 = load %struct.commit_list*, %struct.commit_list** %6, align 8
  %27 = icmp ne %struct.commit_list* %26, null
  br i1 %27, label %28, label %58

28:                                               ; preds = %25
  %29 = load i32, i32* %10, align 4
  %30 = load i32, i32* %9, align 4
  %31 = icmp eq i32 %29, %30
  br i1 %31, label %32, label %50

32:                                               ; preds = %28
  %33 = load %struct.commit_list*, %struct.commit_list** %6, align 8
  %34 = getelementptr inbounds %struct.commit_list, %struct.commit_list* %33, i32 0, i32 0
  %35 = load %struct.TYPE_4__*, %struct.TYPE_4__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %35, i32 0, i32 0
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 0
  %38 = load i32, i32* @current_bad_oid, align 4
  %39 = call i32 @oideq(i32* %37, i32 %38)
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %43, label %41

41:                                               ; preds = %32
  %42 = load %struct.commit_list*, %struct.commit_list** %6, align 8
  store %struct.commit_list* %42, %struct.commit_list** %3, align 8
  br label %60

43:                                               ; preds = %32
  %44 = load %struct.commit_list*, %struct.commit_list** %7, align 8
  %45 = icmp ne %struct.commit_list* %44, null
  br i1 %45, label %46, label %48

46:                                               ; preds = %43
  %47 = load %struct.commit_list*, %struct.commit_list** %7, align 8
  store %struct.commit_list* %47, %struct.commit_list** %3, align 8
  br label %60

48:                                               ; preds = %43
  %49 = load %struct.commit_list*, %struct.commit_list** %4, align 8
  store %struct.commit_list* %49, %struct.commit_list** %3, align 8
  br label %60

50:                                               ; preds = %28
  %51 = load %struct.commit_list*, %struct.commit_list** %6, align 8
  store %struct.commit_list* %51, %struct.commit_list** %7, align 8
  br label %52

52:                                               ; preds = %50
  %53 = load %struct.commit_list*, %struct.commit_list** %6, align 8
  %54 = getelementptr inbounds %struct.commit_list, %struct.commit_list* %53, i32 0, i32 1
  %55 = load %struct.commit_list*, %struct.commit_list** %54, align 8
  store %struct.commit_list* %55, %struct.commit_list** %6, align 8
  %56 = load i32, i32* %10, align 4
  %57 = add nsw i32 %56, 1
  store i32 %57, i32* %10, align 4
  br label %25

58:                                               ; preds = %25
  %59 = load %struct.commit_list*, %struct.commit_list** %4, align 8
  store %struct.commit_list* %59, %struct.commit_list** %3, align 8
  br label %60

60:                                               ; preds = %58, %48, %46, %41
  %61 = load %struct.commit_list*, %struct.commit_list** %3, align 8
  ret %struct.commit_list* %61
}

declare dso_local i32 @get_prn(i32) #1

declare dso_local i32 @sqrti(i32) #1

declare dso_local i32 @oideq(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
